cassettes and minor FTL changes.

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/general.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/general.yml
@@ -13,21 +13,53 @@
   - type: CMAutomatedVendor
     hackable: true
     sections:
+    - name: Cassette Players
+      entries:
+      - id: AU14CassettePlayerGray
+        amount: 10
+      - id: AU14CassettePlayerBlue
+        amount: 10
+      - id: AU14CassettePlayerGreen
+        amount: 10
+      - id: AU14CassettePlayerPink
+        amount: 10
+      - id: AU14CassettePlayerOrange
+        amount: 10
+      - id: AU14CassettePlayerRainbow
+        amount: 10
+      - id: AU14CassettePlayerNeon
+        amount: 10
     - name: Cassettes
       entries:
-      - id: RMCCassettePlayer
-        amount: 50
       - id: AU14CassetteTapeBlueStripe
         amount: 30
       - id: AU14CassetteTapeRisingSun
+        amount: 30
+      - id: AU14CassetteTapeOcean
+        amount: 30
+      - id: AU14CassetteTapeGreen
+        amount: 30
+      - id: AU14CassetteTapeRedBlack
+        amount: 30
+      - id: AU14CassetteTapePink
+        amount: 30
+      - id: AU14CassetteTapeRainbow
+        amount: 30
+      - id: AU14CassetteTapeRedStripe
+        amount: 30
+      - id: AU14CassetteTapeWhite
         amount: 30
       - id: AU14CassetteTapeNeon
         amount: 30
       - id: AU14CassetteTapePurple
         amount: 30
+      - id: AU14CassetteTapeRedDirt
+        amount: 30
       - id: AU14CassetteTapeTan
         amount: 30
       - id: AU14CassetteTapeTWE
+        amount: 30
+      - id: AU14CassetteTapeCLF
         amount: 30
       - id: AU14CassetteTapePartyApproved
         amount: 30
