--- a/Resources/Prototypes/_AU14/Entities/Items/Cassettes/aucasettes.yml
+++ b/Resources/Prototypes/_AU14/Entities/Items/Cassettes/aucasettes.yml
@@ -1,4 +1,116 @@
 - type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerBlue
+  name: blue cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman_1
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerGreen
+  name: green cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman_2
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerPink
+  name: pink cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman_3
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerOrange
+  name: orange cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman_4
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerRainbow
+  name: rainbow cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman_5
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerGray
+  name: gray cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
+  parent: RMCCassettePlayer
+  id: AU14CassettePlayerNeon
+  name: neon cassette player
+  description: A cassette player that first hit the market over 100 years ago. Crazy how these never went out of style.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/cassette_player.rsi
+    state: walkman_6
+  - type: Item
+    size: Small
+  - type: Clothing
+    slots:
+    - ears
+  - type: CassettePlayer
+
+- type: entity
   parent: RMCCassetteTapeBase
   id: AU14CassetteTapeRisingSun
   name: Rising sun cassette
@@ -144,3 +256,169 @@
     - /Audio/_AU14/Cassette/WY/silence.ogg
     - /Audio/_AU14/Cassette/WY/sultan.ogg
     - /Audio/_AU14/Cassette/WY/exit.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeGreen
+  name: Green cassette
+  components:
+  - type: Sprite
+    state: cassette_green
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/Green/paranoid.ogg
+    - /Audio/_AU14/Cassette/Green/tide.ogg
+    - /Audio/_AU14/Cassette/Green/world.ogg
+    - /Audio/_AU14/Cassette/Green/worth.ogg
+    - /Audio/_AU14/Cassette/Green/confusion.ogg
+    - /Audio/_AU14/Cassette/Green/free.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapePink
+  name: Pink striped cassette
+  components:
+  - type: Sprite
+    state: cassette_pink_stripe
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/Pink/come.ogg
+    - /Audio/_AU14/Cassette/Pink/countdown.ogg
+    - /Audio/_AU14/Cassette/Pink/forget.ogg
+    - /Audio/_AU14/Cassette/Pink/pressure.ogg
+    - /Audio/_AU14/Cassette/Pink/zone.ogg
+    - /Audio/_AU14/Cassette/Pink/beat.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeRainbow
+  name: Rainbow cassette
+  components:
+  - type: Sprite
+    state: cassette_rainbow
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/Rainbow/rio.ogg
+    - /Audio/_AU14/Cassette/Rainbow/love.ogg
+    - /Audio/_AU14/Cassette/Rainbow/me.ogg
+    - /Audio/_AU14/Cassette/Rainbow/record.ogg
+    - /Audio/_AU14/Cassette/Rainbow/dream.ogg
+    - /Audio/_AU14/Cassette/Rainbow/safety.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeRedStripe
+  name: Red stripe cassette
+  components:
+  - type: Sprite
+    state: cassette_red_stripe
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/RedStripe/thing.ogg
+    - /Audio/_AU14/Cassette/RedStripe/sugar.ogg
+    - /Audio/_AU14/Cassette/RedStripe/pie.ogg
+    - /Audio/_AU14/Cassette/RedStripe/heart.ogg
+    - /Audio/_AU14/Cassette/RedStripe/dirty.ogg
+    - /Audio/_AU14/Cassette/RedStripe/deadly.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeRedBlack
+  name: Red black cassette
+  components:
+  - type: Sprite
+    state: cassette_red_black
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/RedBlack/trooper.ogg
+    - /Audio/_AU14/Cassette/RedBlack/heavy.ogg
+    - /Audio/_AU14/Cassette/RedBlack/hills.ogg
+    - /Audio/_AU14/Cassette/RedBlack/panama.ogg
+    - /Audio/_AU14/Cassette/RedBlack/reach.ogg
+    - /Audio/_AU14/Cassette/RedBlack/rock.ogg
+    - /Audio/_AU14/Cassette/RedBlack/round.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeOcean
+  name: Ocean cassette
+  components:
+  - type: Sprite
+    state: cassette_ocean
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/Ocean/around.ogg
+    - /Audio/_AU14/Cassette/Ocean/bird.ogg
+    - /Audio/_AU14/Cassette/Ocean/city.ogg
+    - /Audio/_AU14/Cassette/Ocean/koko.ogg
+    - /Audio/_AU14/Cassette/Ocean/moto.ogg
+    - /Audio/_AU14/Cassette/Ocean/nice.ogg
+    - /Audio/_AU14/Cassette/Ocean/surf.ogg
+    - /Audio/_AU14/Cassette/Ocean/wipe.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeWhite
+  name: White cassette
+  components:
+  - type: Sprite
+    state: cassette_regulation
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/White/forever.ogg
+    - /Audio/_AU14/Cassette/White/ring.ogg
+    - /Audio/_AU14/Cassette/White/spanish.ogg
+    - /Audio/_AU14/Cassette/White/loving.ogg
+    - /Audio/_AU14/Cassette/White/morning.ogg
+    - /Audio/_AU14/Cassette/White/cry.ogg
+    - /Audio/_AU14/Cassette/White/cats.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeRedDirt
+  name: Red dirt cassette
+  components:
+  - type: Sprite
+    state: cassette_solaris
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/Flaming/cheat.ogg
+    - /Audio/_AU14/Cassette/Flaming/dirt.ogg
+    - /Audio/_AU14/Cassette/Flaming/horse.ogg
+    - /Audio/_AU14/Cassette/Flaming/sun.ogg
+    - /Audio/_AU14/Cassette/Flaming/you.ogg
+    - /Audio/_AU14/Cassette/Flaming/broken.ogg
+
+- type: entity
+  parent: RMCCassetteTapeBase
+  id: AU14CassetteTapeCLF
+  name: CLF cassette
+  components:
+  - type: Sprite
+    state: cassette_worstmap
+  - type: Item
+    size: Small
+  - type: CassetteTape
+    songs:
+    - /Audio/_AU14/Cassette/CLF/tons.ogg
+    - /Audio/_AU14/Cassette/CLF/tans.ogg
+    - /Audio/_AU14/Cassette/CLF/prison.ogg
+    - /Audio/_AU14/Cassette/CLF/hard.ogg
+    - /Audio/_AU14/Cassette/CLF/copper.ogg
+    - /Audio/_AU14/Cassette/CLF/blues.ogg
