--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyphysician.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyphysician.yml
@@ -9,7 +9,7 @@
     RMCRankCivilianDoctor: []
   startingGear: AU14GearCivilianPhysician
   icon: "CMJobIconDoctor"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
