--- a/Resources/Prototypes/_AU14/Roles/Jobs/Military/platooncorpsman.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Military/platooncorpsman.yml
@@ -14,7 +14,7 @@
   startingGear: AU14GearGOVFORPlatoonCorpsman
   dummyStartingGear: AU14GearGOVFORCorpsmanDummy
   icon: "CMJobIconHospitalCorpsman"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-govfor
   accessGroups:
