--- a/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonsquadrifleman.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonsquadrifleman.yml
@@ -14,7 +14,7 @@
   startingGear: AU14GearGOVFORSquadRifleman
   dummyStartingGear: AU14GearGOVFORRiflemanDummy
   icon: "CMJobIconEmpty"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-govfor
   accessGroups:
