--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfmachinegunner.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfmachinegunner.yml
@@ -9,7 +9,7 @@
     RMCRankCivilian: []
   startingGear: AU14GearCLFMachineGunner
   icon: "CMJobIconEmpty"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-clflrs
   accessGroups:
