--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycivilian.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycivilian.yml
@@ -9,7 +9,7 @@
     RMCRankCivilian: []
   startingGear: AU14GearCivilianColonist
   icon: "CMJobIconEmpty"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
