--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyforeman.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyforeman.yml
@@ -9,7 +9,7 @@
     RMCRankCivilian: []
   startingGear: AU14GearCivilianForeman
   icon: "CMJobIconChiefEngineer"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-colonyadministrator
   accessGroups:
