--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonykellandwarden.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonykellandwarden.yml
@@ -9,7 +9,7 @@
     RMCRankCivilian: [ ]
   startingGear: AU14Gearciviliankellandwarden
   icon: "CMJobIconEmpty"
-  requireAdminNotify: true
+  requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-civiliankellandwarden
   accessGroups:
