--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -221,10 +221,12 @@
   id: CMVendorCigs
   startingInventory:
     RMCCigarettePackLuckySloths: 50
+    AU14CigarettePackBalajj: 20
+    RMCCigarettePackWeYaGold: 10
+    RMCCigarettePackExecutiveSelect: 10
     RMCTarbackTube: 20
     RMCMatchboxFull: 15
     RMCLighter: 25
-    RMCZippo: 10
 
 
 # Security
