--- a/Resources/Prototypes/_RMC14/Entities/Mobs/NPCs/carp.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/NPCs/carp.yml
@@ -77,7 +77,7 @@
   - type: ReplacementAccent
     accent: genericAggressive
   - type: Speech
-    speechSounds: LargeMob
+    speechVerb: LargeMob
   - type: GhostRole
     prob: 0
   - type: MobState
