--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfcellleader.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfcellleader.yml
@@ -8,7 +8,7 @@
   ranks:
     RMCRankCivilian: []
   startingGear: AU14GearCLFCellLeader
-  icon: "RMCJobIconCLFCellCommander"
+  icon: "CMJobIconEmpty"
   requireAdminNotify: true
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-clfcellleader
