--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
@@ -8,7 +8,7 @@
   ranks:
     RMCRankCivilian: []
   startingGear: AU14GearCLFGuerilla
-  icon: "RMCJobIconCLFSoldier"
+  icon: "CMJobIconEmpty"
   requireAdminNotify: false
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-clflrs
