--- a/Resources/Prototypes/_RMC14/Maps/sheperds.yml
+++ b/Resources/Prototypes/_RMC14/Maps/sheperds.yml
@@ -1,6 +1,6 @@
 - type: gameMap
   id: Sheperds
-  mapName: LV-112 Sheperds Pride (Insurgency)
+  mapName: LV-112 Sheperds Pride (Insurgency - USCM)
   mapPath: /Maps/_RMC14/sheperds.yml
   minPlayers: 0
   maxPlayers: 75
@@ -24,8 +24,7 @@
             AU14JobCivilianColonyAdministrator: [1, 1]
 
             # Security/LEO
-            #AU14JobCivilianCMBMarshal: [1, 1]
-            #AU14JobCivilianCMBDeputy: [1, 1]
+            AU14JobCivilianCWPSRanger: [1, 1]
 
             # Engineering/Logi
             AU14JobCivilianForeman: [1, 1]
@@ -54,6 +53,7 @@
             AU14JobGOVFORDCC: [1, 1]
             AU14JobGOVFORSectionSergeant: [1, 1]
             AU14JobGOVFORSquadSergeant: [2, 2]
-            AU14JobGOVFORSquadRifleman: [2, 2]
+            AU14JobGOVFORSquadRifleman: [3, 3]
+            AU14JobGOVFORRadioTelephoneOoperator: [1, 1]
             AU14JobGOVFORSquadAutomaticRifleman: [2, 2]
             AU14JobGOVFORPlatoonCorpsman: [1, 1]
