--- a/Resources/Prototypes/_AU14/Entities/Medical/pills.yml
+++ b/Resources/Prototypes/_AU14/Entities/Medical/pills.yml
@@ -380,3 +380,61 @@
     doAfter: 0
   - type: IconLabel
     labelTextLocId: AU14-naloxone-medicine-container-label-text
+
+#gauze
+
+- type: entity
+  parent: CMBaseHealingItem
+  id: AU14HemostaticGauzePacket
+  name: hemostatic gauze packet
+  description: Some sterile gauze to wrap around bloody stumps and lacerations.
+  components:
+  - type: Sprite
+    state: gauze
+  - type: SpawnItemsOnUse
+    items:
+    - id: AU14HemostaticGauze
+    sound:
+      path: /Audio/Effects/unwrap.ogg
+
+- type: entity
+  parent: CMBaseHealingItem
+  id: AU14HemostaticGauze
+  name: hemostatic gauze
+  description: Some sterile gauze to wrap around bloody stumps and lacerations.
+  suffix: Ten
+  components:
+  - type: Tag
+    tags:
+    - Brutepack
+  - type: Sprite
+    state: gauze
+  - type: Item
+    heldPrefix: gauze
+  - type: WoundTreater
+    wound: Brute
+    treats: true
+    group: Brute
+    consumable: true
+    canUseUnskilled: true
+    skills:
+      RMCSkillMedical: 2
+    treatBeginSound:
+      path: "/Audio/_RMC14/Medical/bandage.ogg"
+    treatEndSound:
+      path: "/Audio/Items/Medical/brutepack_end.ogg"
+    userPopup: cm-gauze-user-popup
+    targetPopup: cm-gauze-target-popup
+    othersPopup: cm-gauze-others-popup
+    noneSelfPopup: cm-gauze-none-self-popup
+    noneOtherPopup: cm-gauze-none-other-popup
+    noWoundsOnUserPopup: cm-wounds-already-treated-self-popup
+    noWoundsOnTargetPopup: cm-wounds-already-treated-target-popup
+  - type: MedicallyUnskilledDoAfter
+    min: 2
+    doAfter: 5
+  - type: Stack
+    stackType: CMGauze
+    count: 1
+  - type: StackPrice
+    price: 1
