--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/sandbags.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/sandbags.yml
@@ -6,6 +6,7 @@
   components:
   - type: BarricadeSandbag
   - type: Climbable
+
   - type: MeleeSound
     soundGroups:
       Brute:
@@ -55,6 +56,20 @@
     thornsDamage:
       types:
         Slash: 10
+  - type: Physics
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape: !type:PhysShapeAabb
+          bounds: "-0.49,-0.45,0.49,-0.15"
+        mask:
+        - FullTileMask
+        layer:
+        - WallLayer
+  - type: BarricadeBlock
+    bidirectional: true
+    blocking: 75
+
 
 - type: entity
   parent: BaseItem
