--- a/Resources/Prototypes/_AU14/Entities/Structures/HESCO.yml
+++ b/Resources/Prototypes/_AU14/Entities/Structures/HESCO.yml
@@ -7,8 +7,6 @@
   - type: Anchorable
   - type: Transform
     anchored: true
-  - type: Physics
-    bodyType: Static
   - type: InteractionOutline
   - type: Damageable
     damageContainer: Inorganic
@@ -19,13 +17,13 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 1000
+        damage: 16000
       behaviors:
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
     - trigger:
         !type:DamageTrigger
-        damage: 1001
+        damage: 16000
       behaviors:
       - !type:EmptyAllContainersBehaviour
       - !type:DoActsBehavior
@@ -33,3 +31,16 @@
   - type: Sprite
     sprite: _AU14/Structures/hesco.rsi
     state: sand_wall
+  - type: Physics
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape: !type:PhysShapeAabb
+          bounds: "-0.49,-0.45,0.49,-0.15"
+        mask:
+        - FullTileMask
+        layer:
+        - WallLayer
+  - type: BarricadeBlock
+    bidirectional: true
+    blocking: 85
