--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfmachinegunner.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfmachinegunner.yml
@@ -26,6 +26,7 @@
         RMCSkillEngineer: 3
         RMCSkillFireman: 2
         RMCSkillVehicles: 1
+        RMCSkillPolice: 1
     - type: JobPrefix
       prefix: au14-job-prefix-clfmachinegunner
     - type: TacticalMapIcon
