gives CLF fighters colonist IDs

--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfcellleader.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfcellleader.yml
@@ -53,7 +53,7 @@
     neck: RMCCLFArmband
     head: AU14CivBallCapBlack
     jumpsuit: CMJumpsuitColonist
-    id: CMIDCardColonist
+    id: AU14IDCardColonyColonist
     ears: AU14CLFHeadset
     eyes: RMCGlassesAviators
   inhand:
