--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
@@ -39,7 +39,7 @@
   equipment:
     jumpsuit: CMJumpsuitColonist
     shoes: RMCBootsPMCFilled
-    id: CMIDCardColonist
+    id: AU14IDCardColonyColonist
     ears: AU14CLFHeadset
     neck: RMCCLFArmband
 
