--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfmachinegunner.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfmachinegunner.yml
@@ -42,7 +42,7 @@
     shoes: RMCBootsPMCFilled
     neck: RMCCLFArmband
     jumpsuit: CMJumpsuitColonist
-    id: CMIDCardColonist
+    id: AU14IDCardColonyColonist
     ears: AU14CLFHeadset
   inhand:
   - RMCWeaponLMGM60
