--- a/Resources/Prototypes/_RMC14/Entities/Areas/areas_sheperd.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Areas/areas_sheperd.yml
@@ -28,149 +28,149 @@
 
 - type: entity
   parent: RMCAreaShepIndoors
-  id: RMCAreaShepUSCM
-  name: USCM
+  id: RMCAreaShepMil
+  name: Military
   components:
   - type: Sprite
-    state: uscm
+    state: military
   - type: Area
     minimapColor: '#97A0A6CC'
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMBarracks
-  name: USCM - Barracks
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilBarracks
+  name: Military - Barracks
   components:
   - type: Sprite
-    state: uscm_barracks
+    state: military_barracks
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMBaths
-  name: USCM - Baths
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilBaths
+  name: Military - Baths
   components:
   - type: Sprite
-    state: uscm_baths
+    state: military_baths
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMBriefing
-  name: USCM - Briefing
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilBriefing
+  name: Military - Briefing
   components:
   - type: Sprite
-    state: uscm_briefing
+    state: military_briefing
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMBrig
-  name: USCM - Brig
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilBrig
+  name: Military - Brig
   components:
   - type: Sprite
-    state: uscm_brig  
+    state: military_brig
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMCIC
-  name: USCM - CIC
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilCIC
+  name: Military - CIC
   components:
   - type: Sprite
-    state: uscm_cic
+    state: military_cic
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMWestGate
-  name: USCM - West Gate Observation
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilWestGate
+  name: Military - West Gate Observation
   components:
   - type: Sprite
-    state: uscm_w_gate
+    state: military_w_gate
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMEastGate
-  name: USCM - East Gate Observation
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilEastGate
+  name: Military - East Gate Observation
   components:
   - type: Sprite
-    state: uscm_e_gate
+    state: military_e_gate
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMNWObservation
-  name: USCM - North West Observation
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilNWObservation
+  name: Military - North West Observation
   components:
   - type: Sprite
-    state: uscm_nw_observe
+    state: military_nw_observe
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMNEObservation
-  name: USCM - North East Observation
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilNEObservation
+  name: Military - North East Observation
   components:
   - type: Sprite
-    state: uscm_ne_observe
+    state: military_ne_observe
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMSWObservation
-  name: USCM - South West Observation
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilSWObservation
+  name: Military - South West Observation
   components:
   - type: Sprite
-    state: uscm_sw_observe
+    state: military_sw_observe
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMSEObservation
-  name: USCM - South East Observation
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilSEObservation
+  name: Military - South East Observation
   components:
   - type: Sprite
-    state: uscm_se_observe
+    state: military_se_observe
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMGarage
-  name: USCM - Garage
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilGarage
+  name: Military - Garage
   components:
   - type: Sprite
-    state: uscm_garage
+    state: military_garage
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMHospital
-  name: USCM - Hospital
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilHospital
+  name: Military - Hospital
   components:
   - type: Sprite
-    state: uscm_hospital
+    state: military_hospital
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMOffice
-  name: USCM - Office
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilOffice
+  name: Military - Office
   components:
   - type: Sprite
-    state: uscm_office
+    state: military_office
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMPlatoonCommander
-  name: USCM - Platoon Commander
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilPlatoonCommander
+  name: Military - Platoon Commander
   components:
   - type: Sprite
-    state: uscm_platoon_commander
+    state: military_platoon_commander
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMBarracks2
-  name: USCM - Officers & Auxiliary
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilBarracks2
+  name: Military - Officers & Auxiliary
   components:
   - type: Sprite
-    state: uscm_barracks2
+    state: military_barracks2
 
 - type: entity
-  parent: RMCAreaShepUSCM
-  id: RMCAreaShepUSCMWaste
-  name: USCM - Waste Management
+  parent: RMCAreaShepMil
+  id: RMCAreaShepMilWaste
+  name: Military - Waste Management
   components:
   - type: Sprite
-    state: uscm_waste
+    state: military_waste
 
 - type: entity
   parent: RMCAreaShepIndoors
@@ -514,11 +514,11 @@
 
 - type: entity
   parent: RMCAreaShepOutdoors
-  id: RMCAreaShepUSCMLZ1
-  name: USCM - LZ 1
+  id: RMCAreaShepMilLZ1
+  name: Military - LZ 1
   components:
   - type: Sprite
-    state: uscm_lz
+    state: military_lz
   - type: Area
     resinAllowed: false
     minimapColor: '#384852CC'
@@ -526,11 +526,11 @@
 
 - type: entity
   parent: RMCAreaShepOutdoors
-  id: RMCAreaShepUSCMLZ2
-  name: USCM - LZ 2
+  id: RMCAreaShepMilLZ2
+  name: Military - LZ 2
   components:
   - type: Sprite
-    state: uscm_lz
+    state: military_lz
   - type: Area
     resinAllowed: false
     minimapColor: '#384852CC'
@@ -538,21 +538,21 @@
 
 - type: entity
   parent: RMCAreaShepOutdoors
-  id: RMCAreaShepUSCMPerimeter
-  name: USCM - Perimeter
+  id: RMCAreaShepMilPerimeter
+  name: Military - Perimeter
   components:
   - type: Sprite
-    state: uscm_perimeter
+    state: military_perimeter
   - type: Area
     minimapColor: '#97A0A6CC'
 
 - type: entity
   parent: RMCAreaShepOutdoors
-  id: RMCAreaShepUSCMYard
-  name: USCM - Yard
+  id: RMCAreaShepMilYard
+  name: Military - Yard
   components:
   - type: Sprite
-    state: uscm_yard
+    state: military_yard
   - type: Area
     minimapColor: '#97A0A6CC'
 
@@ -841,12 +841,12 @@
 
 - type: entity
   parent: RMCAreaShepOOB
-  id: RMCAreaShepUSCMOOB
-  name: USCM - Out Of Bounds
+  id: RMCAreaShepMilOOB
+  name: Military - Out Of Bounds
   components:
   - type: Sprite
     layers:
-    - state: uscm
+    - state: military
     - state: oob
   - type: Area
     minimapColor: '#141D25CC'
