Update vehicles.yml to add Johnny Wayne Jr's stock car
Add the stockcar to the vehicles.yml

--- a/Resources/Prototypes/_AU14/Entities/Structures/vehicles.yml
+++ b/Resources/Prototypes/_AU14/Entities/Structures/vehicles.yml
@@ -1390,3 +1390,25 @@
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
   - type: RequireProjectileTarget
+
+  # Stock car
+
+- type: entity
+  id: AU14propstockcar
+  name: stock car
+  description: A stock car used by UA racing fame John Wayne Jr. Just pretend the supercharger is stock.
+  components:
+  - type: Sprite
+    sprite: sprite path/stockcar.rsi
+    state: stockcar
+  - type: Clickable
+  - type: InteractionOutline
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 30000
+    behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: RequireProjectileTarget
